# First-Agent-dev

./: .dockerignore  .env.fa.template  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .pylintrc-tests  .tmp-commit-msg3.txt  ADR-11-Authoring-Guardrails-Blueprint.md  AGENTS.md  DOCKER_USAGE_GUIDE.md  Dockerfile.fa  FEATURES.md  FINAL_DELIVERABLE.md  HANDOFF.md  Makefile  PR_BODY.md  PR_BODY_GUARDRAILS_V2.md  PR_DESCRIPTION.md  PR_NOTE_DOCKER_RUNTIME.md  PR_NOTE_LOOP_FOUNDATION.md  README.md  chain-exhaustion-retry.patch  docker-compose.fa.yml  fa-guardrails-full.patch  fa-test-gaming-hardening.patch  fix-entrypoint-tests-v4.patch  justfile  legacy-cleanup-final-v2.patch  legacy-cleanup-final-v3.patch  legacy-cleanup-final.patch  pyproject.toml  pytest_results.txt  secret-paths-bypass.patch  smart_legacy_cleaner.py  test_sandbox_path_containment.py  tmp_hygiene_err.txt  update-scripts-fix.patch  workspace-isolation-final.patch
.github/: CODEOWNERS
.github/workflows/: advisory.yml  authoring-guardrails.yml  ci.yml  pylint.yml  semgrep.yml  tests.yml
.gremlins_cache/: results.db
For cross-reference with ADR's/: FA-inspiration-deep-dive.md  correlated-llm-errors-and-ensembling-2026-05.md  kronos-deep-dive.md
catch-corpus/F-2/: fixture.py
catch-corpus/F-7/: fixture.py
catch-corpus/I-5-focus/: fixture.py
catch-corpus/I-5-skip/: fixture.py
catch-corpus/I-5-xfail/: fixture.py
coverage/gremlins/: history.json  index.html
docs/: glossary.md
fp-corpus/pure-compare/: fixture.py
fp-corpus/skipif/: fixture.py
fp-corpus/strict-xfail/: fixture.py
knowledge/: BACKLOG.md  MAINTENANCE.md  README.md  SETUP_AIO.md  architecture.md  ci-guardrails-reference.md  glossary.md  llms.txt  loop-improvement-workplan.md  mutation-survivors-workplan.md  project-overview.md
knowledge/adr/: ADR-1-v01-use-case-scope.md  ADR-10-deterministic-harness-invariants.md  ADR-11-authoring-guardrails.md  ADR-12-secret-isolation.md  ADR-13-workspace-isolation.md  ADR-2-llm-tiering.md  ADR-3-memory-architecture-variant.md  ADR-4-storage-backend.md  ADR-5-chunker-tool.md  ADR-6-tool-sandbox-allow-list.md  ADR-7-inner-loop-tool-registry.md  ADR-8-hook-registry.md  ADR-9-llm-provider-client.md  ADR-template.md  DIGEST.md  README.md
knowledge/anti-patterns/: AP-001-spec-bypassing-workaround.md  AP-002-stale-routing-index-counts.md  AP-003-shallow-fix-no-mechanism.md  AP-004-symptom-chasing-without-model.md  README.md
knowledge/codemaps/: inner-loop-hooks-runtime-pipeline.md  model-freedom-control-runtime-pipeline.md  observability-logging-analytics-pipeline.md  provider-runtime-config-cooldown-pipeline.md
knowledge/examples/: models.yaml.example
knowledge/instructions/: 01-install.md  02-operations.md  README.md
knowledge/overview/: FEATURES.md
knowledge/pr-notes/: PR_BODY.md  PR_NOTE_DOCKER_DOCS_CONSOLIDATION.md  PR_NOTE_DOCKER_RUNTIME.md  PR_NOTE_DOCS_IA_RESTRUCTURE.md  PR_NOTE_FA_PROBE.md  PR_NOTE_HOOKS_AND_WRAPPER_HELP.md  PR_NOTE_HOOK_WORKFLOW_CLOSURE.md  PR_NOTE_LIVE_OUTPUT.md  PR_NOTE_LOGGING_CLEANUP.md  PR_NOTE_OPS_AND_DOCS.md  PR_NOTE_SANDBOX_MUTATION_CLOSURE.md  PR_NOTE_STATS.md  PR_NOTE_SYSTEM_PROMPTS_V2.md  PR_NOTE_UPDATE_SCRIPTS_FIX.md  PR_NOTE_workflow_slices_A_to_H.md  README.md  chain-exhaustion-retry.md  ci-smoke-fix.md  network-resilience-fix.md  redteam-sandbox-harden.md  secret-paths-bypass.md  workspace-isolation.md
knowledge/prompts/: README.md  RESOLVER.md  architect-fa-compact.md  architect-fa.md  ci-qa-implementation-session-start.md  coder-recovery.md  handoff-summarizer.md  prompting.md  research-briefing.md  tool-shapes.yaml
knowledge/research/: ADR-11-Authoring-Guardrails-Blueprint.md  First-Agent-ops-cross-reference.md  agent-roles.md  agent-video-research.md  agentic-memory-supplement.md  ai-context-os-memm-deep-dive.md  ara-protocol-cross-reference-2026-05.md  architect-fa-refactor-ru.md  bootstrap-cost-baseline-2026-05.md  borrow-roadmap-2026-05.md  chat-cross-reference-2026-05.md  ci-qa-tooling-adversarial-2026-06.md  cli-ergonomics-design-2026-06-29.md  correlated-llm-errors-and-ensembling-2026-05.md  cross-reference-ampcode-sliders-to-adr-2026-04.md  dpc-messenger-inspiration-2026-05.md  fa-abc-synthesis-deep-dive-2026-05.md  fa-workflow-loop-implementation-plan-2026-06-29.md  fa-workflow-operator-maintainer-next-actions-memo-2026-06-30.md  gortex-aperant-inspiration-2026-05.md  homelab-deployment-24-7-2026-06.md  kronos-agent-os-inspiration-2026-05.md  linux-dev-env-wsl2-2026-06.md  llm-agent-failure-modes-guardrails-2026-06.md  llm-wiki-community-batch-1.md  llm-wiki-community-batch-2.md  llm-wiki-critique-first-agent.md  (+7 more)
scripts/: PR22_REVIEW.md  backup-fa.sh  check_doc_links.py  check_protected_paths.py  fa  fa-clean-rebuild.sh  fa-entrypoint.sh  fa-host-layout-audit.py  fa-normalize-env.sh  fa-post-setup.sh  fa-update.sh  fa.service  setup-fa-desktop.sh
secrets/: fa.env.template
src/fa/: cli.py  (+8 more)
tests/: _authoring_report.schema.json  test_authoring_check_cli.py  test_authoring_report_schema.py  test_authoring_rules.py  test_authoring_rules_exports.py  test_authoring_rules_tests.py  test_authoring_tcb.py  test_bash_intent.py  test_check_protected_paths.py  test_chunker_plaintext.py  test_cli.py  test_cli_dotenv_loader.py  test_cli_ergonomics.py  test_coder_loop.py  test_config.py  test_container_build_invariants.py  test_corpus.py  test_cost_guardian.py  test_cost_table.py  test_deploy_scripts.py  test_doc_links.py  test_egress_proxy.py  test_fa_entrypoint.py  test_fa_update_script.py  test_hook_registry.py  test_hygiene_hooks_install.py  test_hygiene_suggestions.py  test_hygiene_tokens.py  test_inner_loop_attempt_history.py  test_inner_loop_audit_sink.py  test_inner_loop_blockers.py  test_inner_loop_builtin_hooks.py  test_inner_loop_loop_guard.py  test_inner_loop_recovery_classifier.py  test_inner_loop_registry.py  test_inner_loop_runtime.py  test_inner_loop_runtime_limits.py  test_inner_loop_tools.py  test_inner_loop_validation.py  test_intent_guard.py  (+38 more)
verifiers/: edit_file.yaml  fs.read_file.yaml  fs.run_bash.yaml  fs.write_file.yaml
(+97 files in other folders)
