[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "first-agent"
version = "0.1.0"
description = "Locally orchestrated, mixed-tier LLM coding agent."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "0oi9z7m1z8" },
]
dependencies = [
  "markdown-it-py>=3.0",
  # JSON-Schema Draft 2020-12 validator. Pinned by
  # ADR-7 §5 «Input validation» as «single new dependency at this layer».
  # Used by `ToolRegistry.dispatch` for per-call params validation and by
  # `ToolRegistry.register` for schema-shape validation at registry init.
  "jsonschema>=4.21",
  # YAML parser for the ADR-9 §1 `~/.fa/models.yaml` config surface
  # (T-4 loader: `fa.providers.config.load_models_config_from_path`).
  # The hand-rolled `_yaml_subset.py` covers inline-comment stripping
  # only and cannot safely round-trip nested lists-of-mappings; the
  # `verifier/verify_action.py` parser comment already anticipates this
  # transition («v0.2 HookRegistry PR (R-1) lands the broader YAML
  # loader and this function will switch to it then»). Used by
  # `fa.providers.config.load_models_config`; consumers MUST call
  # `yaml.safe_load` only (never `yaml.load` — the loader contract
  # is data-only, no tag execution).
  "pyyaml>=6.0",
]

[tool.first-agent.system-dependencies]
universal-ctags = "Required by ADR-5 chunker; install via apt, brew, or the OS package manager."

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  # PyYAML type stubs for the T-4 models.yaml loader; pulled in dev
  # only because the runtime `yaml.safe_load` surface returns
  # `Any`-typed data the loader narrows immediately.
  "types-PyYAML>=6.0",
]

[project.scripts]
fa = "fa.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fa"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "B",
  "C4",
  "E",
  "F",
  "I",
  "N",
  "PYI",
  "RUF",
  "UP",
  "W",
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["fa"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
files = ["src", "tests"]

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-config", "--strict-markers"]
testpaths = ["tests"]
asyncio_mode = "auto"
