[build-system]
requires = ["hatchling>=1.30,<2.0"]
build-backend = "hatchling.build"

[project]
name = "first-agent"
version = "0.1.0"
description = "Locally orchestrated, mixed-tier LLM coding agent."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [
  { name = "0oi9z7m1z8" },
]
dependencies = [
  "markdown-it-py>=3.0",
  # JSON-Schema Draft 2020-12 validator. Zero-transitive-deps drop-in
  # replacing jsonschema. Compiles schema to a Python function (~10×
  # faster validation). Used by `ToolRegistry.dispatch` for per-call
  # params validation and by `ToolRegistry.register` for schema-shape
  # validation at registry init.
  "fastjsonschema>=2.21",
  # YAML parser for the ADR-9 §1 `~/.fa/models.yaml` config surface
  # (T-4 loader: `fa.providers.config.load_models_config_from_path`).
  # The hand-rolled `_yaml_subset.py` covers inline-comment stripping
  # only and cannot safely round-trip nested lists-of-mappings; the
  # `verifier/verify_action.py` parser comment already anticipates this
  # transition («v0.2 HookRegistry PR (R-1) lands the broader YAML
  # loader and this function will switch to it then»). Used by
  # `fa.providers.config.load_models_config`; consumers MUST call
  # `yaml.safe_load` only (never `yaml.load` — the loader contract
  # is data-only, no tag execution).
  "pyyaml>=6.0",
  # AST parser for IntentGuard's bash effect analysis: classify
  # repo writes / index writes / verifier commands without regexing
  # shell syntax. Used at runtime by `fa.inner_loop.bash_intent`.
  "bashlex>=0.18",
]

[tool.first-agent.system-dependencies]
universal-ctags = "Required by ADR-5 chunker; install via apt, brew, or the OS package manager."

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  # Mutation testing: verifies the test suite actually CATCHES bugs, not just
  # that lines execute. Critical guard against "looks-thorough" LLM tests.
  "mutmut>=3.0",
  "ruff>=0.5",
  # PyYAML type stubs for the T-4 models.yaml loader; pulled in dev
  # only because the runtime `yaml.safe_load` surface returns
  # `Any`-typed data the loader narrows immediately.
  "types-PyYAML>=6.0",
  # Windows-native mutation testing (no fork / no WSL). Mirrors mutmut
  # on Linux; required for the [tool.pytest-gremlins] config in this
  # file to actually run on Windows dev machines.
  "pytest-gremlins>=0.2",
  # SCA floor: scans dependencies for known CVEs (PyPA-maintained).
  # Run via `just audit` or `make audit`. Blocking gate.
  "pip-audit>=2.7",
  # Dependency hygiene: flags unused/missing/misplaced deps in pyproject.toml.
  # Run via `just lint` / `make lint`. Blocking gate.
  "deptry>=0.21",
  # Parallel type checker (Meta, stable 1.0). Advisory-only; does not
  # replace mypy. Run via `just typecheck-advisory`.
  "pyrefly>=1.0",
]

[project.scripts]
fa = "fa.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fa"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
  "B",
  "C4",
  "E",
  "F",
  "I",
  "N",
  "PYI",
  "RUF",
  "UP",
  "W",
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["fa"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
files = ["src", "tests"]

[tool.pytest.ini_options]
# --cov gates: fail the suite if line coverage drops below the threshold set
# in [tool.coverage.report] (fail_under). This is the primary "is it tested"
# safety net for LLM-written code, which often ships logic with no test at all.
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--cov=fa",
  "--cov-report=term-missing",
  "--cov-report=xml",
]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true            # branch coverage catches untested if/else paths
source = ["src/fa"]
omit = [
  "*/__main__.py",       # thin CLI entry points: covered via integration, not unit
]

[tool.coverage.report]
# Strict gate. You are currently at ~92%; 90% leaves a small buffer while still
# blocking real regressions. Raise this over time (it can only ratchet up).
fail_under = 90
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "@(abc\\.)?abstractmethod",
]

# ---------------------------------------------------------------------------
# Mutation testing (mutmut). Coverage proves a line RAN; it does NOT prove a
# test would FAIL if that line were wrong. LLM-generated tests frequently
# "exercise" code without asserting the right thing. Mutmut mutates your source
# (e.g. flips `<` to `<=`, `True` to `False`) and reruns tests: a *surviving*
# mutant means a real bug could slip past your suite.
#
# Run locally:   mutmut run          (slow: runs the suite per mutation)
#                mutmut results      (list survivors)
#                mutmut show <id>    (see the exact mutation that survived)
# ---------------------------------------------------------------------------
[tool.mutmut]
paths_to_mutate = ["src/fa/"]
tests_dir = ["tests/"]
# Keep CI fast: run mutation on the high-risk logic modules first. Expand this
# list as you harden more of the codebase.
# (mutmut 3.x reads this; for a focused run use: mutmut run -- src/fa/sandbox/)

# ---------------------------------------------------------------------------
# Pylint configuration
#
# Policy (see PR adding this block): "balanced". Pylint runs in CI via
# .github/workflows/pylint.yml. We:
#   * keep every Error/Warning that points at real risk,
#   * silence purely-cosmetic Convention/Refactor checks that this codebase
#     deliberately does not follow (docstrings on every symbol, hard caps on
#     returns/branches/locals, dataclass "too few public methods", etc.),
#   * gate CI on a score threshold via `fail-under` rather than on "zero
#     messages", so style nits never block a merge but real regressions do.
#
# IMPORTANT: the matching CI job MUST install the project + dev extras
# (`pip install -e ".[dev]"`) before invoking pylint. Without that, pylint
# cannot import markdown_it / yaml / bashlex / pytest and emits
# spurious E0401 import-error messages.
# ---------------------------------------------------------------------------
[tool.pylint.main]
# Treat the project as a real package so intra-repo imports resolve.
init-hook = "import sys; sys.path.insert(0, 'src')"
# Belt-and-suspenders: if a CI env can't install a runtime dep, don't let a
# missing third-party module masquerade as a code error.
ignored-modules = []

[tool.pylint."messages control"]
disable = [
    # --- cosmetic: documentation. This repo documents modules/ADRs richly
    #     but does not require a docstring on every function/class. ---
    "missing-module-docstring",       # C0114
    "missing-class-docstring",        # C0115
    "missing-function-docstring",     # C0116

    # --- cosmetic/structural: size & shape heuristics. These are opinions,
    #     not bugs; the code intentionally has small dataclasses, single-
    #     method strategy classes, and dispatch functions with many returns. ---
    "too-few-public-methods",         # R0903
    "too-many-instance-attributes",   # R0902
    "too-many-return-statements",     # R0911
    "too-many-branches",              # R0912
    "too-many-arguments",             # R0913
    "too-many-locals",                # R0914
    "too-many-statements",            # R0915
    "too-many-nested-blocks",         # R1702

    # NOTE: `duplicate-code` (R0801) is intentionally NOT disabled here. It is
    # one of the highest-value checks for an LLM-assisted codebase, because
    # agents tend to copy-paste-and-tweak instead of extracting shared helpers
    # (which silently causes "fix one copy, the other keeps the bug" drift).
    # It stays ENABLED for src/. The tests/ pass disables it separately (see
    # .pylintrc-tests and .github/workflows/pylint.yml) because parallel test
    # scaffolding/fixtures are legitimately similar.

    # --- test-suite ergonomics: idioms that are normal in pytest/tests. ---
    "redefined-outer-name",           # W0621 (pytest fixtures shadow by design)
    "unused-argument",                # W0613 (test doubles must match signatures)
    "protected-access",               # W0212 (tests legitimately poke internals)
    "import-outside-toplevel",        # C0415 (lazy/local imports in tests & hot paths)
]

[tool.pylint.basic]
# These dataclass attributes are capability/config FLAG names that map 1:1 to
# external config keys; SCREAMING_SNAKE_CASE is intentional and must not be
# renamed. Pylint treats dataclass fields as *variables*, so the knob is the
# variable-name regex (allow snake_case OR SCREAMING_SNAKE_CASE), plus an
# explicit allow-list for the five capability flags.
variable-rgx = "^(?:[a-z_][a-z0-9_]*|[A-Z_][A-Z0-9_]*)$"
good-names = [
    "ENABLE_DYNAMIC_TOOLS",
    "REQUIRE_DYNAMIC_TOOL_SANDBOX",
    "ENABLE_MCP_GATEWAY_MANAGEMENT",
    "ENABLE_DYNAMIC_MCP_SERVERS",
    "ENABLE_SERVER_OPS",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.similarities]
# duplicate-code (R0801) tuning for src/. Keep it sensitive to real logic
# copy-paste (the #1 LLM-agent code smell) but don't flag boilerplate:
min-similarity-lines = 6   # default 4; 6 avoids tiny incidental matches
ignore-comments = true
ignore-docstrings = true
ignore-imports = true      # parallel import blocks in __init__.py are fine
ignore-signatures = true   # similar function signatures are not duplication

[tool.pylint.reports]
# CI passes when the score is at or above this. Real Errors/Warnings drag the
# score down fast, so regressions still fail; lingering style nits don't.
fail-under = 9.0

# ---------------------------------------------------------------------------
# pytest-gremlins — native-Windows mutation testing (no fork / no WSL).
# Local spot-check that tests actually CATCH bugs, not just execute lines.
# Run scoped to the high-risk sandbox folder:
#   pytest tests/test_sandbox_*.py --gremlins --gremlin-parallel
# CI keeps using mutmut on Linux (tests.yml); this is the Windows-dev mirror.
# ---------------------------------------------------------------------------
[tool.pytest-gremlins]
paths = ["src/fa/sandbox"]
operators = ["comparison", "arithmetic", "boolean", "boundary", "return"]
exclude = ["**/test_*", "**/__init__.py"]
report = ["console", "html"]
cache = true

[tool.pyrefly]
project-includes = [
    "src",
    "tests",
]
python-version = "3.13.0"
preset = "strict"

[tool.deptry]
# Dev-only packages are intentionally not imported in src/; they are
# CLI tools (ruff, mypy, pre-commit, mutmut, pip-audit, deptry, pyrefly)
# or test-scoped (pytest, pytest-asyncio, pytest-cov, pytest-gremlins)
# or type stubs (types-PyYAML).
per_rule_ignores = {
  DEP002 = [
    "mypy", "pre-commit", "pytest", "pytest-asyncio", "pytest-cov",
    "mutmut", "ruff", "types-PyYAML", "pytest-gremlins", "pip-audit",
    "deptry", "pyrefly",
  ],
}
