[build-system]
requires = ["hatchling>=1.30,<2.0"]
build-backend = "hatchling.build"

[project]
name = "first-agent"
version = "0.1.0"
description = "Locally orchestrated, mixed-tier LLM coding agent."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [
  { name = "0oi9z7m1z8" },
]
dependencies = [
  "markdown-it-py>=3.0",
  # JSON-Schema Draft 2020-12 validator. Zero-transitive-deps drop-in
  # replacing jsonschema. Compiles schema to a Python function (~10×
  # faster validation). Used by `ToolRegistry.dispatch` for per-call
  # params validation and by `ToolRegistry.register` for schema-shape
  # validation at registry init.
  "fastjsonschema>=2.21",
  # YAML parser for the ADR-9 §1 `~/.fa/models.yaml` config surface
  # (T-4 loader: `fa.providers.config.load_models_config_from_path`).
  # The hand-rolled `_yaml_subset.py` covers inline-comment stripping
  # only and cannot safely round-trip nested lists-of-mappings; the
  # `verifier/verify_action.py` parser comment already anticipates this
  # transition («v0.2 HookRegistry PR (R-1) lands the broader YAML
  # loader and this function will switch to it then»). Used by
  # `fa.providers.config.load_models_config`; consumers MUST call
  # `yaml.safe_load` only (never `yaml.load` — the loader contract
  # is data-only, no tag execution).
  "pyyaml>=6.0",
  # AST parser for IntentGuard's bash effect analysis: classify
  # repo writes / index writes / verifier commands without regexing
  # shell syntax. Used at runtime by `fa.inner_loop.bash_intent`.
  "bashlex>=0.18",
]

[tool.first-agent.system-dependencies]
universal-ctags = "Required by ADR-5 chunker; install via apt, brew, or the OS package manager."

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  # Mutation testing: verifies the test suite actually CATCHES bugs, not just
  # that lines execute. Critical guard against "looks-thorough" LLM tests.
  "mutmut>=3.0",
  "ruff>=0.5",
  # PyYAML type stubs for the T-4 models.yaml loader; pulled in dev
  # only because the runtime `yaml.safe_load` surface returns
  # `Any`-typed data the loader narrows immediately.
  "types-PyYAML>=6.0",
  # Windows-native mutation testing (no fork / no WSL). Mirrors mutmut
  # on Linux; required for the [tool.pytest-gremlins] config in this
  # file to actually run on Windows dev machines.
  "pytest-gremlins>=0.2",
  # SCA floor: scans dependencies for known CVEs (PyPA-maintained).
  # Run via `just audit` or `make audit`. Blocking gate.
  "pip-audit>=2.7",
  # Dependency hygiene: flags unused/missing/misplaced deps in pyproject.toml.
  # Run via `just lint` / `make lint`. Blocking gate.
  "deptry>=0.21",
  # Parallel type checker (Meta, stable 1.0). Advisory-only; does not
  # replace mypy. Run via `just typecheck-advisory`.
  "pyrefly>=1.1.1",
  # Pylint gap-checks profile (duplicate-code + cyclic-import only; the
  # rest is covered by ruff/mypy). Run via `just lint`. Blocking gate.
  "pylint>=3.2",
  # Dead-code detector. LLM agents leave orphaned helpers behind when they
  # rewrite instead of refactor; vulture surfaces them. Run via
  # `just deadcode`. Advisory (not in `just check`) — vulture cannot see
  # dynamic dispatch, so findings need human judgement before deletion.
  "vulture>=2.11",
]

[project.scripts]
fa = "fa.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fa"]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["catch-corpus", "fp-corpus", "mutants"]

[tool.ruff.lint]
select = [
  "B",
  # BLE: blind `except Exception` — top LLM-agent smell: defensive swallow
  # that hides real bugs for months. Every legitimate broad catch carries
  # an inline `# noqa: BLE001` + one-line rationale (machine-checked intent).
  "BLE",
  "C4",
  # C90: cyclomatic-complexity ratchet (mccabe). LLM code measurably trends
  # toward bloated functions (GitClear 2025; Sonar 2025). Threshold below.
  "C90",
  "E",
  "F",
  "I",
  "N",
  # PGH: blanket-suppression guard — `# noqa` without codes (PGH004) or
  # bare `# type: ignore` (PGH003) would silently disable ALL checks on a
  # line; force agents to name the exact rule they are waiving.
  "PGH",
  "PYI",
  "RUF",
  # S: bandit-derived security floor — ~45% of AI-generated code carries
  # OWASP-class flaws (Veracode 2025), so a deterministic SAST gate runs
  # on every PR, not weekly-advisory Semgrep alone. Intentional sites carry
  # `# noqa: S###` + rationale; tests are exempt via per-file-ignores.
  "S",
  "UP",
  "W",
]
ignore = []

[tool.ruff.lint.mccabe]
# Drift-stop, not a style opinion: existing offenders got explicit waivers;
# NEW functions above 15 fail CI. Agents must decompose instead of growing
# god-functions. Do not raise this; lower it as waivers retire.
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
# Tests: `assert` IS the framework; fake tokens / subprocess fixtures /
# tmp paths are test scaffolding, not production attack surface.
"tests/**" = ["S"]

[tool.ruff.lint.isort]
known-first-party = ["fa"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
files = ["src", "tests"]
exclude = ["^catch-corpus/", "^fp-corpus/", "^mutants/"]

[tool.pytest.ini_options]
# --cov gates: fail the suite if line coverage drops below the threshold set
# in [tool.coverage.report] (fail_under). This is the primary "is it tested"
# safety net for LLM-written code, which often ships logic with no test at all.
# NOTE: coverage flags intentionally NOT in addopts. A bare `pytest
# tests/test_x.py` must work for agents iterating on a single module
# (a partial run would always "fail" the 90% gate and teach agents to
# ignore red output). The gate lives in `just test` / CI, which run the
# FULL suite with --cov; fail_under in [tool.coverage.report] still
# blocks merges.
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true            # branch coverage catches untested if/else paths
source = ["src/fa"]
omit = [
  "*/__main__.py",       # thin CLI entry points: covered via integration, not unit
]

[tool.coverage.report]
# Strict gate. Ratchet: raise as coverage improves, never lower for convenience.
# 2026-06-21: temporarily 89 while cli.py's _cmd_run/_cmd_egress_proxy runtime
# paths (78% covered) are below the line. The fa-probe PR added 8 new tests
# and improved overall from 89.38% → 89.72%. BACKLOG I-28 tracks restoring 90.
fail_under = 89
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "@(abc\\.)?abstractmethod",
]

# ---------------------------------------------------------------------------
# Mutation testing (mutmut). Coverage proves a line RAN; it does NOT prove a
# test would FAIL if that line were wrong. LLM-generated tests frequently
# "exercise" code without asserting the right thing. Mutmut mutates your source
# (e.g. flips `<` to `<=`, `True` to `False`) and reruns tests: a *surviving*
# mutant means a real bug could slip past your suite.
#
# Run locally:   mutmut run          (slow: runs the suite per mutation)
#                mutmut results      (list survivors)
#                mutmut show <id>    (see the exact mutation that survived)
# ---------------------------------------------------------------------------
[tool.mutmut]
# mutmut 3.x key names (the 2.x `paths_to_mutate` / `tests_dir` keys are
# deprecated aliases and the 2.x CLI flags were REMOVED — passing
# `--paths-to-mutate` errors out; see tests.yml history note).
# Scope: high-risk sandbox modules first; expand as modules are hardened.
# Survivor-clearing tracker: knowledge/mutation-survivors-workplan.md
source_paths = ["src/fa/sandbox"]
pytest_add_cli_args_test_selection = [
  "tests/test_sandbox_classifier.py",
  "tests/test_sandbox_validators.py",
  "tests/test_sandbox_bash_gate.py",
  "tests/test_sandbox_path_containment.py",
  "tests/test_sandbox_secret_paths.py",
]

# ---------------------------------------------------------------------------
# Pylint configuration — "gap checks only" profile.
#
# Policy: pylint runs ONLY the checks ruff does not implement and that have
# real value for an LLM-agent-managed codebase:
#   * duplicate-code (R0801) — copy-paste-and-tweak is the #1 LLM-agent code
#     smell; ruff has no cross-file duplication detector.
#   * cyclic-import  (R0401) — import cycles are a structural drift signal;
#     ruff has no whole-program import-graph analysis.
# Everything else pylint can report is already covered by ruff (E/W/F/B/N/UP)
# or mypy strict, so it is disabled to avoid double-reporting and the fuzzy
# 9.0-score gate. The gate is now binary: ANY message fails (exit code != 0).
#
# Scope: src/ only (invoked as `pylint src/fa` from `just lint`). Tests are
# NOT linted by pylint: duplicate-code is expected in parallel test
# scaffolding and cyclic imports cannot occur in a flat tests/ tree.
#
# Waivers: a finding that is reviewed-and-accepted gets a file-level
# `# pylint: disable=duplicate-code` comment WITH a rationale next to it.
#
# IMPORTANT: the invoking environment MUST have the project + dev extras
# installed (`uv sync --frozen --extra dev`); otherwise pylint cannot build
# the import graph for cyclic-import.
# ---------------------------------------------------------------------------
[tool.pylint.main]
# Treat the project as a real package so intra-repo imports resolve.
init-hook = "import sys; sys.path.insert(0, 'src')"
ignore-paths = ["catch-corpus/.*", "fp-corpus/.*", "mutants/.*"]
# Explicit binary gate: ANY emission of these checks fails the run,
# regardless of score arithmetic. Without fail-on, the gate rests on
# "score < 10.0 implies exit != 0", which silently breaks if anyone
# reintroduces a fail-under threshold below 10.
fail-on = ["duplicate-code", "cyclic-import"]

[tool.pylint."messages control"]
disable = ["all"]
enable = [
    "duplicate-code",   # R0801 — not in ruff; key anti-copy-paste guard
    "cyclic-import",    # R0401 — not in ruff; import-graph hygiene
]

[tool.pylint.similarities]
# duplicate-code (R0801) tuning. Keep it sensitive to real logic copy-paste
# but don't flag boilerplate:
min-similarity-lines = 6   # default 4; 6 avoids tiny incidental matches
ignore-comments = true
ignore-docstrings = true
ignore-imports = true      # parallel import blocks in __init__.py are fine
ignore-signatures = true   # similar function signatures are not duplication

# ---------------------------------------------------------------------------
# pytest-gremlins — native-Windows mutation testing (no fork / no WSL).
# Local spot-check that tests actually CATCH bugs, not just execute lines.
# Run scoped to the high-risk sandbox folder:
#   pytest tests/test_sandbox_*.py --gremlins --gremlin-parallel
# CI keeps using mutmut on Linux (tests.yml); this is the Windows-dev mirror.
# ---------------------------------------------------------------------------
[tool.pytest-gremlins]
paths = ["src/fa/sandbox"]
operators = ["comparison", "arithmetic", "boolean", "boundary", "return"]
exclude = ["**/test_*", "**/__init__.py"]
report = ["console", "html"]
cache = true

[tool.pyrefly]
project-includes = [
    "src",
    "tests",
]
python-version = "3.13.0"
preset = "strict"
# Advisory-only: suppress pyrefly-specific strictness rules that mypy does not
# enforce, to avoid noise on a codebase written for mypy strict.
# Revisit when migrating from mypy to pyrefly as primary type checker.
[tool.pyrefly.errors]
implicit-any-empty-container = false

[tool.deptry.per_rule_ignores]
# Dev-only packages are intentionally not imported in src/; they are
# CLI tools (ruff, mypy, pre-commit, mutmut, pip-audit, deptry, pyrefly, pylint)
# or test-scoped (pytest, pytest-asyncio, pytest-cov, pytest-gremlins)
# or type stubs (types-PyYAML).
DEP002 = [
    "mypy", "pre-commit", "pytest", "pytest-asyncio", "pytest-cov",
    "mutmut", "ruff", "types-PyYAML", "pytest-gremlins", "pip-audit",
    "deptry", "pyrefly", "pylint", "vulture",
]
